style.css
body {
  margin: 0;
  background-color: black;
  font-family: 'Montserrat', sans-serif;
  overflow-x: hidden;
}

/* Top Nav */

.topnav-container {
  width: 392px;
  margin: 0 auto;
}

.topnav {

  background-color:black;
  text-align:center;
  position:fixed;
  z-index:9999;
  width: 100vw;
  margin: 0px auto;
  float:clear;
}

.topnav a {
  float: left;
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 12px;
}

.topnav a:hover {
  color: grey;
}

.topnav a > img {
  width: 25px;
  height: 25px;
}

.active {
  color: white;
}

.topnav .icon {
  display: none;
}

/* Diagonal Line */

.diagonal-white-right {
    width: 101%;
    border-bottom: 75px solid white;
    -webkit-transform:
        translateY(-50px)
        translateX(0px)
        rotate(2deg);
    position: absolute;
    overflow-x: hidden;
}

.diagonal-white-left {
    width: 101%;
    border-bottom: 75px solid white;
    -webkit-transform:
        translateY(-50px)
        translateX(0px)
        rotate(-2deg);
    position: absolute;
    overflow-x: hidden;
}

.diagonal-black-right {
    width: 101%;
    border-bottom: 73px solid black;
    -webkit-transform:
        translateY(-50px)
        translateX(0px)
        rotate(-2deg);
    position: absolute;
    overflow-x: hidden;
    right: -1px;
}

.diagonal-black-left {
    width: 101%;
    border-bottom: 75px solid black;
    -webkit-transform:
        translateY(-50px)
        translateX(0px)
        rotate(2deg);
    position: absolute;
    overflow-x: hidden;
    right: -1px;
}


/* Back to top button */

#back-to-top {
    position: fixed;
    bottom: 40px;
    right: 40px;
    z-index: 9999;
    width: 32px;
    height: 32px;
    text-align: center;
    line-height: 30px;
    color: #444;
    cursor: pointer;
    border: 0;
    border-radius: 2px;
    text-decoration: none;
    transition: opacity 0.2s ease-out;
    opacity: 0;
}

#back-to-top.show {
    opacity: 1;
}
#content {
    height: 2000px;
}

.top {
  font-size: 30px;
}

.top:hover {
  color: grey;
}

/* Hero Section */
.top-logo-with-parallax {
  background-image: url("https://abihill.github.io/images/abi-hill-logo-glitch-white.gif");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 400px;
  -o-background-size: 400px;
  -moz-background-size: 400px;
  -webkit-background-size: 400px;
  min-height: 800px;
  background-attachment: fixed;
  /* background-image: url("images/LOGO-abi.jpg"); */
}



.white-title {
  font-family: 'Montserrat', sans-serif;
  font-size: 88px;
  margin: 0;
  color: white;
}

.black-title {
  font-family: 'Montserrat', sans-serif;
  font-size: 88px;
  margin: 0;
  color: black;
}

/* About Section */

.box-two {
  height: 900px;
  background-color: white;
  overflow: hidden;

}

.about-full-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 78%;
  margin: 0 auto;
  flex-wrap: wrap;
  max-width: 1000px;
}



.about-icon {
  width: 30px;
  height: 30px;
  margin-top: 24px;
}

.triangle-icon {
  width: 30px;
  height: 30px;
  margin-top: 40px;
  position: inherit;
}

.left-about-wrapper a {
  text-decoration: none;
  color: black;
}

.left-about-wrapper a:hover {
  text-decoration: none;
  color: grey;
}

.skill-icon {
  width: 20px;
  height: 20px;
}

.left-about-wrapper {
  width: 450px;
  padding: 20px
}
.right-about-wrapper{
  width: 455px;
  padding: 20px
}

/* About Skill section */


.skill-outline-box {
  margin-top: 80px;
  background-color: #1C1B20;
  min-width: 350px;
  max-width: 100%;
  height: 545px;
}

.skills-inner-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  margin: 0 auto;
  width: 350px;
}



.skill-title {
  color: white;
  font-size: 15px;
  font-family: 'Montserrat', sans-serif;
}

.skill-box-right {
  width: 290px;
  padding: 10px
}

.skill-box-left {
  width: 260px;
  padding: 10px
}

.skill-box-left p {
  color: white;
  color: #686868;
  margin: 0;
  font-family: 'Montserrat', sans-serif;
  padding-top: 3px;
}



.skill-box-right-top p {
    color: white;
    color: #686868;
    margin: 0;
    font-family: 'Montserrat', sans-serif;
    padding-top: 3px;
}
.skill-box-right-bottom p {
    color: white;
    color: #686868;
    margin: 0;
    font-family: 'Montserrat', sans-serif;
    padding-top: 3px;
}


.parralax-zigzag {
    background-image: url("images/zigzag.png");
    background-position: center;
    background-size: 400px;
    min-height: 400px;
    background-attachment: fixed;
}

.parralax-crosses {
    background-image: url("images/crosses.gif");
    background-position: center;
    background-size: 400px;
    min-height: 400px;
    background-attachment: fixed;
}



/* BOX THREE - experience */

.box-three {
  height: 670px;
  background-color: black;
  overflow: hidden;

}



.experience-work-wrapper {
  padding-top: 50px;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  margin: 0 auto;
  flex-wrap: wrap;
}
.company-work-experience-block {
  width: 300px;
}
.company-work-experience-block h4 {
  min-height: 30px;
}
.company-work-experience-block h5 {
  min-height: 20px;
}

.experience-work-wrapper div img {
  width: 200px;
}

.experience-full-wrapper {
  width: 80%;
  margin: 0 auto;
}

.experience-work-wrapper p {
  color: white;
  padding-right: 10px;
}

.experience-work-wrapper h4 {
  color: white;
}
.experience-work-wrapper h5 {
  color: white;
}

/* BOX Four - Projects----- */

.box-four {
  height: 2400px;
  background-color: white;
  overflow: hidden;

}



.projects-work-wrapper {
  padding-top: 50px;
  width: 80%;
  margin: 0 auto;
}


.projects-full-wrapper {
  width: 80%;
  margin: 0 auto;

}

.projects-screen {
  background-image: url("images/mac-screen.png");
  background-repeat: no-repeat;
  background-size: contain;
  min-width: 73%;
  max-width: 80%;
  min-height: 535px;
  margin: 0 auto;


}

.flickity-container {
  position: relative;
  width: 92%;
  height: 50%;
  margin: 0 auto;
  max-width: 605px;
}

.projects-info-wrapper {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  max-width: 825px;
}

.project-block {
  max-width: 400px;
  min-width: 300px;
  padding: 20px;
  margin: 20px;
  background-color: #1C1B20;

}

.project-block i {
  color: white;
  font-size: 30px;
  margin-right: 10px;

}

.project-block p {
  min-height: 150px;
  color: white;
}

.project-block h4 {
  color: white;
}

.project-block h5 {
  color: #686868;
}

.project-block i:hover {
  color: grey;
}

/* Box Five - Contacts */

.box-five {
  height: 400px;
  background-color: black;
  overflow: hidden;

}

.contacts-full-wrapper {
  width: 80%;
  margin: 0 auto;


}



.contact-p {
  color: white;

}

.contacts-container a {
  text-decoration: none;
  color: white;
}

.contacts-container i {
  padding-right: 15px;

}

.copyright-block {
  color: white;
  float: right;
}

.contacts-and-copy-right-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.contacts-container a:hover {
  color: grey;
}


/* MOBILE RESPONSIVE */

@media screen and (max-width: 1070px) {
  .box-three {
    height: 1050px;

  }
}


@media screen and (max-width: 1000px) {

  .box-two {
    height: 1650px;

  }

  .box-three {
    height: 1000px;

  }

  .skill-outline-box {
    margin-top: 0;
  }
}

@media screen and (max-width: 1040px) {
  .box-four {
    height: 3700px;

  }

  .projects-info-wrapper {
    flex-wrap: wrap;
    justify-content: center;
  }
}

@media screen and (max-width: 760px) {

  .white-title {
    font-size: 55px;
  }

  .black-title {
    font-size: 55px;
  }



  .box-three {
    height: 1400px;

  }

  .copyright-block {
    float: left;
  }

  .projects-screen {
    min-height: 300px;
    min-width: 250px;
  }

  .top-logo-with-parallax {
    background-image: url("https://abihill.github.io/images/abi-hill-logo-glitch-white.gif");
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    -o-background-size: contain;
    -moz-background-size: contain;
    -webkit-background-size: contain;
    min-height: 700px;
    background-attachment: inherit;
    /* background-image: url("images/LOGO-abi.jpg"); */
  }
}



@media screen and (max-width: 600px) {
  .topnav a {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
  .topnav-container {
    margin: 0;
  }
}

@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}

